--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
           </ul>
         </div>
       </nav>
+      <div class="outer-container">
+        
       <div class="container d-flex justify-content-center">
+        <div class="card" style="width:30rem;">
+          <img src="assets/images/Profile.jpg" alt="profile pic">
+        </div>
         <div class="card">
             <h4 class="card-header">About Me</h4>
             <div class="card-body">
@@ -40,6 +45,7 @@
             </div>
           </div>
       </div>
+    </div>
       <footer> <i class="fab fa-linkedin"></i>
         <i class="fab fa-github"></i>
     </footer>
