--- a/contact.html
+++ b/contact.html
@@ -4,13 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet"  type="text/css" href="./assets/css/style.css">
-    <script src="https://kit.fontawesome.com/d31c44e089.js" crossorigin="anonymous"></script>
-    
     <title>Contact</title>
+
+    <!---------Font Awesome and Google Fonts links-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
+   <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@1,600&family=Dancing+Script:wght@603&family=Lobster&display=swap" rel="stylesheet">
+
+    <!-- Bootstrap Core CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+
+    <!----------CSS Link----------->
+    <link rel="stylesheet" type="text/css" href="/assets/css/style.css"> 
+    <link rel="stylesheet" type="text/css" href="/assets/css/contact.css"> 
+
 </head>
 <body>
-    
+   <!-- Navigation -->
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="#contact">Contact</a>
+      </div>
+      <div class="row burgerBck">
+      <i class="fas fa-bars fa-2x" onclick="openNav()" id="burger"></i>
+    </div>
+    <!-------Contact Form-------->
+    <div class="container " id="contact1">
+        <div class="row d-flex justify-content-center contactRow">
+            <h1 class="contactMe"><hr>CONTACT<hr></h1> 
+           </div>
+<form class="contactForm">
+    <div class="form-group">
+        <label for="name">Name</label>   
+        <input id="name" name="name" type="text" placeholder="Your name" class="form-control">
+    </div>
+    <div class="form-group">
+        <label for="exampleFormControlInput1">Email address</label>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+      </div>
+      <div class="form-group">
+        <label for="exampleFormControlTextarea1">Message</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="message"></textarea>
+      </div>
+      <div class="row click d-flex justify-content-center">
+        <button type="button" class="btn btn-secondary btn-lg">Submit</button>
+      </div>
+</form>
+    </div>
+    <!-- <footer class="footer">
+        <h6> Copyright © Sara Pereira</h6>
+    </footer> -->
 </body>
+<script src="/assets/js/navbar.js"></script>
 </html>
