figuring out relative paths

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div class="col-md-4 col-sm-6">
           <div class="single-content">
             <a href="https://gentle-spire-07039.herokuapp.com/" target="_blank">
-              <img src="/assets/images/FF2.png" alt="FriendFinder" width="100%" height="relative">
+              <img src="assets/images/FF2.png" alt="FriendFinder" width="100%" height="relative">
 
               <div class="text-content">
                 <h4>Friend Finder</h4>
