relative paths done

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div class="col-md-4 col-sm-6">
           <div class="single-content">
             <a href="https://gentle-spire-07039.herokuapp.com/" target="_blank">
-              <img src="assets/images/FF2.png" alt="FriendFinder" width="100%" height="relative">
+              <img src="./assets/images/FF2.png" alt="FriendFinder" width="100%" height="relative">
 
               <div class="text-content">
                 <h4>Friend Finder</h4>
@@ -137,7 +137,7 @@
         <div class="col-md-4 col-sm-6">
           <div class="single-content">
             <a href="https://tranquil-sierra-07610.herokuapp.com/" target="_blank">
-              <img src="/assets/images/bookapp.png" alt="FriendFinder" width="relative" height="180vh">
+              <img src="./assets/images/bookapp.png" alt="FriendFinder" width="relative" height="180vh">
 
               <div class="text-content">
                 <h4>Book App</h4>
@@ -149,7 +149,7 @@
         <div class="col-md-4 col-sm-6">
           <div class="single-content">
             <a href="https://saranp-33.github.io/GifTastic/" target="_blank">
-              <img src="/assets/images/Giftastic2.png" alt="Giftastic" width="100%" height="relative">
+              <img src="./assets/images/Giftastic2.png" alt="Giftastic" width="100%" height="relative">
 
               <div class="text-content">
                 <h4>GifTastic</h4>
@@ -199,6 +199,6 @@
 <script
   src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
 <!-- scripts for this portfolio -->
-<script src="/assets/js/navbar.js"></script>
+<script src="./assets/js/navbar.js"></script>
 
 </html>
