--- a/portfolio.html
+++ b/portfolio.html
@@ -19,8 +19,8 @@
         integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
     <!----------CSS Link----------->
-    <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
-    <link rel="stylesheet" type="text/css" href="/assets/css/portfolio.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/portfolio.css">
 
     <!------------FONT AWESOME JS------->
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js"
@@ -179,6 +179,6 @@
     </section>
 
 </body>
-<script src="/assets/js/navbar.js"></script>
+<script src="./assets/js/navbar.js"></script>
 
 </html>
