--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
     <!----------CSS Link----------->
-    <link rel="stylesheet" type="text/css" href="/assets/css/style.css"> 
-    <link rel="stylesheet" type="text/css" href="/assets/css/contact.css"> 
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css"> 
+    <link rel="stylesheet" type="text/css" href="./assets/css/contact.css"> 
 
 </head>
 <body>
@@ -57,5 +57,5 @@
         <h6> Copyright © Sara Pereira</h6>
     </footer> -->
 </body>
-<script src="/assets/js/navbar.js"></script>
+<script src="./assets/js/navbar.js"></script>
 </html>
