all paths now correct

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="single-content">
                         <a href="https://gentle-spire-07039.herokuapp.com/" target="_blank">
-                            <img src="/assets/images/FF2.png" alt="FriendFinder" width="100%" height="relative">
+                            <img src="./assets/images/FF2.png" alt="FriendFinder" width="100%" height="relative">
 
                             <div class="text-content">
                                 <h4>Friend Finder</h4>
@@ -72,7 +72,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="single-content">
                         <a href="https://tranquil-sierra-07610.herokuapp.com/" target="_blank">
-                            <img src="/assets/images/bookapp.png" alt="FriendFinder" width="relative" height="180vh">
+                            <img src="./assets/images/bookapp.png" alt="FriendFinder" width="relative" height="180vh">
 
                             <div class="text-content">
                                 <h4>Book App</h4>
@@ -84,7 +84,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="single-content">
                         <a href="https://saranp-33.github.io/GifTastic/" target="_blank">
-                            <img src="/assets/images/Giftastic2.png" alt="Giftastic" width="100%" height="relative">
+                            <img src="./assets/images/Giftastic2.png" alt="Giftastic" width="100%" height="relative">
 
                             <div class="text-content">
                                 <h4>GifTastic</h4>
@@ -99,7 +99,7 @@
                 <div class="col-md-4 col-sm-6 ">
                     <div class="single-content ">
                         <a href="https://github.com/SaraNP-33/LiriBot" target="_blank">
-                            <img src="/assets/images/liribot.png" alt="FriendFinder" width="100%" height="relative">
+                            <img src="./assets/images/liribot.png" alt="FriendFinder" width="100%" height="relative">
 
                             <div class="text-content">
                                 <h4>LiriBot</h4>
@@ -111,7 +111,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="single-content">
                         <a href="https://github.com/SaraNP-33/bamazon" target="_blank">
-                            <img src="/assets/images/bamazon.png" alt="FriendFinder" width="relative" height="180vh">
+                            <img src="./assets/images/bamazon.png" alt="FriendFinder" width="relative" height="180vh">
 
                             <div class="text-content">
                                 <h4>Bamazon</h4>
@@ -123,7 +123,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="single-content">
                         <a href="https://saranp-33.github.io/TrainSchedule/" target="_blank">
-                            <img src="/assets/images/train.png" alt="Giftastic" width="100%" height="relative">
+                            <img src="./assets/images/train.png" alt="Giftastic" width="100%" height="relative">
 
                             <div class="text-content">
                                 <h4>Train</h4>
@@ -138,7 +138,7 @@
                 <div class="col-md-4 col-sm-6 ">
                     <div class="single-content ">
                         <a href="https://saranp-33.github.io/unit-4-game/" target="_blank">
-                            <img src="/assets/images/crystal.png" alt="FriendFinder" width="100%" height="relative">
+                            <img src="./assets/images/crystal.png" alt="FriendFinder" width="100%" height="relative">
 
                             <div class="text-content">
                                 <h4>Crystal Collector</h4>
