working on sidevav additions such as photo, name, title and footer

--- a/about.html
+++ b/about.html
@@ -27,11 +27,22 @@
       <!-- Navigation -->
    
   <div id="mySidenav" class="sidenav">
+    <img class="navImage rounded-circle ml-4" src="./assets/images/profile2.jpeg" width="190px" height="180px">
+    <h5 class="name text-center mt-2">Sara Neves Pereira</h5>
+    <h6 class=" title text-center">Full Stack Web Developer</h6>
+    <hr>
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="contact.html">Contact</a>
+    <footer class="footer">
+        <div class="row">
+          <a href="https://www.linkedin.com/in/sara-np/" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/SaraNP-33" target="_blank"><i class="fab fa-github-square"></i></a>
+        </div>
+        
+      </footer>
   </div>
   <div class="row burgerBck">
   <i class="fas fa-bars fa-2x" onclick="openNav()" id="burger"></i>
@@ -41,12 +52,9 @@
         <h1 class="aboutMe"><hr>ABOUT<hr></h1> 
        </div>
        <p class="text-justify pt-2 storyBrand">
-        Hi! My name is Sara Pereira. Currently I live in Phoenix, Arizona which is a huge change 
-        from where I am originally from - The Azores - these are islands in the middle of the Atlantic. 
-        I have two degrees; one is on Cinema Production from Paris, and the other is on Social and Cultural Analysis
-        from ASU. They seem very different, but what they have in common is that both these degrees are about
-        understanding how things work. This is why I have decided to change my career and pursue Web Development. 
-        It's the ultimate puzzle!
+        Full-Stack Web Developer with a Certificate from the University of Arizona with skills including Javascript, jQuery, Node, Express, React, MySql, and MongoDB among others.  Sara’s passion for Software Development is rooted by her love of learning, her aptitude for problem solving and her aspiration to carry projects through to their completion… from back… to front.
+        Sara currently resides in Phoenix, AZ but was born and raised in The Azores islands in the middle of the Atlantic.  Multilingual, in addition to English, Sara also speaks Portugese, French and Spanish.
+        Other education worth noting includes a Social and Cultural Analysis Degree from Arizona State University and a Cinema Production degree from ESRA (École Supérieure de Réalisation Audiviosuelle) in Paris, France.  These show that Sara has been always interested in the mystery of how things work… which is why she knows that she has found the right profession in Web Development… the ultimate puzzle.
        </p>
   </div>
   <section class="page-section" id="skill">
