--- a/index.html
+++ b/index.html
@@ -37,11 +37,23 @@
 
 
   <div id="mySidenav" class="sidenav">
+    <img class="navImage rounded-circle ml-4" src="./assets/images/profile2.jpeg" width="190px" height="180px">
+    <h5 class="name text-center mt-2">Sara Neves Pereira</h5>
+    <h6 class=" title text-center">Full Stack Web Developer</h6>
+    <hr>
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="#page-top">Home</a>
     <a href="#about">About</a>
     <a href="#portfolio">Portfolio</a>
     <a href="#contact">Contact</a>
+   
+    <footer class="footer">
+      <div class="row">
+        <a href="https://www.linkedin.com/in/sara-np/" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/SaraNP-33" target="_blank"><i class="fab fa-github-square"></i></a>
+      </div>
+      
+    </footer>
   </div>
   <div class="row burgerBck">
     <i class="fas fa-bars fa-2x" onclick="openNav()" id="burger"></i>
@@ -53,8 +65,8 @@
 
     <!-- <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span> -->
     <div class="container nameTitle">
-      <div id="logo" class="mb-1">Sara Pereira</div>
-      <div class="mb-1"> Full Stack Developer</div>
+      <div id="logo" class="mb-1">Sara Neves Pereira</div>
+      <div class="mb-1 ml-5"> Full Stack Web Developer</div>
 
     </div>
   </header>
