made picture on sidenav smaller, added different background to contact section

--- a/about.html
+++ b/about.html
@@ -27,7 +27,9 @@
       <!-- Navigation -->
    
   <div id="mySidenav" class="sidenav">
-    <img class="navImage rounded-circle ml-4" src="./assets/images/profile2.jpeg" width="190px" height="180px">
+    <div class="row d-flex justify-content-center">
+        <img class="navImage rounded-circle" src="./assets/images/profile2.jpeg" width="130px" height="130px">
+      </div>
     <h5 class="name text-center mt-2">Sara Neves Pereira</h5>
     <h6 class=" title text-center">Full Stack Web Developer</h6>
     <hr>
