changed contact on the bottom from a section to a footer

--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
   <section class="page-section" id="skill">
     <div class="container allSkills">
         <div class="row d-flex justify-content-center skillsRow">
-        <h2><hr>CODE LANGUAGES AND LIBRARIES<hr></h2>
+        <h2><hr>LANGUAGES AND LIBRARIES<hr></h2>
     </div>
         <div class="row">
             <div class="col-lg-3 col-md-6 text-center">
