--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <div id="mySidenav" class="sidenav">
     <div class="row d-flex justify-content-center">
-    <img class="navImage rounded-circle" src="./assets/images/profile2.jpeg" width="130px" height="130px">
+    <img class="navImage rounded-circle" src="./assets/images/profile2.jpeg">
   </div>
     <h5 class="name text-center mt-2">Sara Neves Pereira</h5>
     <h6 class=" title text-center">Full Stack Web Developer</h6>
@@ -47,7 +47,7 @@
     <a href="#page-top">Home</a>
     <a href="#about">About</a>
     <a href="#portfolio">Portfolio</a>
-    <a href="#contact">Contact</a>
+    <a href="contact.html">Contact</a>
    
     <footer class="footer">
       <div class="row">
@@ -183,8 +183,18 @@
   </section>
 
   <!--------Contact Me-------->
-  <section class="mt-3" id="contact">
-    <div class="container" style="height:70vh" id="email">
+  <section class="" id="contact">
+    <div class="container mainFooter">
+    <div class="row d-flex justify-content-center" >
+      <a href="https://www.linkedin.com/in/sara-np/" style="color: #66c2ff" target="_blank"><i class="fab fa-linkedin fa-2x mr-2"></i></a>
+      <a href="https://github.com/SaraNP-33" style="color: #66c2ff"target="_blank"><i class="fab fa-github-square fa-2x"></i></a>
+      <a href="contact.html" style="color: #66c2ff"target="_blank"><i class="fas fa-envelope-square fa-2x ml-2"></i></a>
+      
+    </div>
+    <p class="text-center text-secondary mt-2">&copy;Copyright | Sara Neves Pereira</p>
+  </div>
+  </section>
+<!-- <div class="container" style="height:70vh" id="email">
       <div class="row contactMe d-flex justify-content-center">
         <h2> Ready! Set! Build Amazing Websites and Apps!</h2>
       </div>
@@ -194,9 +204,7 @@
       </a>
       </div>
 
-    </div>
-  </section>
-
+    </div> -->
 
 </body>
 <!-- jQuery CDN - Slim version (=without AJAX) -->
