changed size of masthead

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 
     <!-- <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span> -->
     <div class="container nameTitle">
-      <div id="logo" class="mb-1">Sara Neves Pereira</div>
-      <div class="mb-1 ml-5"> Full Stack Web Developer</div>
+      <div id="logo" class="text-wrap mb-1 ">Sara Neves Pereira</div>
+      <div class="mainTitle mb-1"> Full Stack Web Developer</div>
 
     </div>
   </header>
