--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
   </section>
 
   <!--------Contact Me-------->
-  <section class="" id="contact">
+  <section class="sticky-bottom" id="contact">
     <div class="container mainFooter">
     <div class="row d-flex justify-content-center" >
       <a href="https://www.linkedin.com/in/sara-np/" style="color: #66c2ff" target="_blank"><i class="fab fa-linkedin fa-2x mr-2"></i></a>
