--- a/portfolio.html
+++ b/portfolio.html
@@ -85,7 +85,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="single-content">
                         <a href="https://tranquil-sierra-07610.herokuapp.com/" target="_blank">
-                            <img src="./assets/images/bookapp.png" alt="FriendFinder" width="relative" height="180vh">
+                            <img src="./assets/images/bookParadise.png" alt="FriendFinder" width="100%" height="relative">
 
                             <div class="text-content">
                                 <h4>Book App</h4>
@@ -124,7 +124,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="single-content">
                         <a href="https://github.com/SaraNP-33/bamazon" target="_blank">
-                            <img src="./assets/images/bamazon.png" alt="FriendFinder" width="relative" height="180vh">
+                            <img src="./assets/images/bamazon.png" alt="FriendFinder" width="100%" height="relative">
 
                             <div class="text-content">
                                 <h4>Bamazon</h4>
