added new css file and included it on every html file

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <!----------CSS Link----------->
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
   <link rel="stylesheet" type="text/css" href="./assets/css/portfolio.css">
+  <link rel="stylesheet" type="text/css" href="./assets/css/mediaQueries.css">
 
   <!------------FONT AWESOME JS------->
   <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js"
