--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
     <!----------CSS Link----------->
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css"> 
     <link rel="stylesheet" type="text/css" href="./assets/css/contact.css"> 
+    <link rel="stylesheet" type="text/css" href="./assets/css/mediaQueries.css">
 
 </head>
 <body>
